classDiagram
    class torch.utils.data.Dataset {
        +__len__() int
        +__getitem__(index: int) Any
    }

    class VerifiableDatasetInfo {
        +verify_dataset(root_hash: HASH)
        +verify_single_file(file_path: str, file_hash: HASH)
        +from_json(json_str: str) VerifiableDatasetInfo
    }

    class VerifiableMapStyleDataset {
        +__len__() int
        +__getitem__(index: int) Any
        +create_datasets() void <<abstract>>
    }

    class VerifiableImageFolder {
        +__len__() int
        +__getitem__(index: int) Any
        +create_datasets() void
    }

    class FolderDataset {
        +__len__() int
        +__getitem__(index: int) Any
        +load_file(file_path: str) void <<abstract>>
    }

    class ImageFolder {
        +__len__() int
        +__getitem__(index: int) Any
        +load_file(file_path: str) void
    }

    torch.utils.data.Dataset <|.. VerifiableMapStyleDataset
    torch.utils.data.Dataset <|.. FolderDataset
    VerifiableMapStyleDataset o-- VerifiableDatasetInfo
    VerifiableMapStyleDataset <|-- VerifiableImageFolder
    VerifiableMapStyleDataset o-- FolderDataset
    FolderDataset <|-- ImageFolder
    